# anoncreds-revocation-manager-py

./: .gitignore  Dockerfile  Dockerfile_revocation  Dockerfile_witness  README.md  holder.py  issuer.py  main.py  requirements1.txt  test.ipynb  test_pk.py  test_pk_pair.ipynb  todo.md
agora-allosaurus-py/: setup.py  test.ipynb
agora-allosaurus-py/allosaur/: bindings.py  error.py
agora-allosaurus-rs/: Cargo.toml
agora-allosaurus-rs/benches/: updates.rs
agora-allosaurus-rs/src/: accumulator.rs  custom_bytebuffer.rs  ffi.rs  lib.rs  mpc.rs  servers.rs  user.rs  utils.rs  witness.rs
agora-allosaurus-rs/src/accumulator/: acc.rs  key.rs  witness.rs
c_test/: c_test.c  test_allosaurus
include/: allosaurus.h
revocation-manager-py/: main.py  models.py
witness-server/: main.py
witness-server-py/: main.py  models.py  test.ipynb
