[package]
authors = ["Michael Lodder <redmike7@gmail.com>", "Hart Montgomery <hart.montgomery@gmail.com>", "Sam Jaques <sejaques@uwaterloo.ca>"]
description = "An implementation of ALLOSAURUS as described in https://eprint.iacr.org/2022/1362/"
documentation = "https://docs.rs/agora-allosaurus-rs"
edition = "2021"
homepage = "https://github.com/hyperledger-labs/agora-allosaurus-rs"
keywords = ["crypto", "accumulator", "mpc", "revocation"]
license-file = "LICENSE"
name = "agora_allosaurus_rs"
readme = "README.md"
repository = "https://github.com/hyperledger-labs/agora-allosaurus-rs"
version = "0.1.0"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["ffi"]
ffi = ["ffi-support", "lazy_static", "rand/default", "std"]
std = ["blstrs_plus", "digest/std", "sha3/std"]

[dependencies]
blsful = "2.5"
merlin = "3.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sha3 = "0.10"
zeroize = "1.8"
ffi-support = { version = "0.4", optional = true }
lazy_static = { version = "1.4", optional = true }
blstrs_plus = { version = "^0.8.4", features = ["portable"], optional = true }
digest = { version = "0.10", default-features = false }
bincode = "1.3"
arrayref = "0.3.6"
postcard = { version = "1.0.10", features = ["use-std"] }
gennaro-dkg = "1.0.0-rc1"
rand_chacha = "0.3"

[dev-dependencies]
criterion = "0.5"
rayon = "1.10"
serde_bare = "0.5.0"
uint-zigzag = { version = "0.2", features = ["std"] }

[[bench]]
name = "updates"
harness = false